# ocr-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: development-workflow.md
src/passport_ocr_api/: __init__.py  config.py  errors.py  logging_config.py  main.py  middleware.py  schemas.py
src/passport_ocr_api/api/: manual_tester.py  routes.py
src/passport_ocr_api/services/: __init__.py  circuit_breaker.py  dependencies.py  document_loader.py  google_vision.py  image_preprocessing.py  local_tesseract.py  media_extractor.py  mrz_parser.py  orchestrator.py  orientation.py  types.py  upload_validator.py  validation.py
tests/: test_api.py  test_google_vision.py  test_image_preprocessing.py  test_local_tesseract.py  test_media_extractor.py  test_mrz_parser.py  test_ocr_integration.py  test_orchestrator.py  test_orientation.py  test_upload_validator.py  test_validation.py
