[project]
name = "passport-ocr-api"
version = "0.1.0"
description = "FastAPI passport OCR extraction module with orientation correction and hybrid OCR fallback."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "google-api-core==2.30.3",
    "google-cloud-vision==3.14.0",
    "httpx==0.28.1",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pypdfium2==5.8.0",
    "pytesseract==0.3.13",
    "python-multipart==0.0.29",
    "uvicorn==0.48.0",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pip-audit==2.10.0",
    "pytest==9.0.3",
    "ruff==0.15.14",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passport_ocr_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pytesseract", "pypdfium2", "google.cloud.*", "google.api_core.*"]
ignore_missing_imports = true
